# Demo_CMake

./: .gitignore  CMakeLists.txt  CMakePresets.json  CxxBLAS.cpp  README.md  example.cpp  hello-embedded-python.c  information.txt  leaky_implementation.cpp  leaky_implementation_main.cpp  linear-algebra.cpp  main.cpp  sum_integs_test.cpp  sum_integs_test.py  sum_integs_test2.cpp  sum_integs_test3.cpp  sum_integs_test4.cpp  sum_up  use_numpy.py
1.1/: CMakeLists.txt
1.2/: CMakeLists.txt
1.6/: CMakeLists.txt  information.txt
1.7/: CMakeLists.txt
1.8/: CMakeLists.txt
11.1/: CMakeCPack.cmake  CMakeLists.txt
12.1/: CMakeLists.txt
12.2/: CMakeLists.txt
12.3/: CMakeLists.txt
14.1/: CMakeLists.txt
14.2/: CMakeLists.txt
14.4/: CTestConfig.cmake
3.2/: hello-embedded-python.c
3.3/: CMakeLists.txt
3.4/: CMakeLists.txt
3.6/: CMakeLists.txt
3.8/: CMakeLists.txt
3.9/: CMakeLists.txt
4.1/: CMakeLists.txt
4.2/: CMakeLists.txt
5.3/: CMakeLists.txt
5.8/: CMakeLists.txt
7.1/tests/: CMakeLists.txt  test.cpp
7.4/tests/: CMakeLists.txt  test.cpp
7.7/: CMakeLists.txt
7.7/cmake/: custom.cmake  include_guard.cmake
7.7/tests/: CMakeLists.txt
7.8/tests/: CMakeLists.txt
9.2/src/math/: CMakeLists.txt
9.3/cmake-cython/: FindCython.cmake
cmake/: set_compiler_flag.cmake  testing.cmake
src/: CMakeLists.txt
test/: feature-a.py  feature-b.py
tests/: CMakeLists.txt  test.cpp
